@@ -295,7 +295,8 @@
       "radolan": "DWD Radolan",
       "siteCircles": "Site Cirlces",
       "site": "Site",
-      "altitudeChart": "Altitude Chart"
+      "altitudeChart": "Altitude Chart",
+      "range": "Range"
     }
   }
 }
